[project]
name = "alien-invasion"
version = "0.4.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pygame-ce>=2.5.7"
]
authors = [
    {name = "Lucky Mbalule", email = "luckymbalule@gmail.com"}
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v"